# capital-bikeshare-demand-forecasting

./: .dockerignore  .env.example  .gitignore  Dockerfile  METHODOLOGY.md  README.md  README_QUICKSTART.md  docker-compose.airflow.yml  docker-compose.yml  pyproject.toml  requirements-airflow.txt  requirements.txt
airflow/dags/: bike_demand_weekly_pipeline.py
api_service/: main.py
notebooks/: 01_eda.ipynb  09_model_station_3segments_catboost_dual.ipynb  10_recursive_backtest_days.ipynb
scripts/: build_offline_dataset.py  export_station_forecast.py  predict_recursive_days.py  train_offline_final_model.py
src/bike_demand_forecasting/: features.py  final_training.py  inference.py  io.py  metrics.py  offline_dataset.py  preprocessing.py  rebalancing.py  recursive_forecast.py  station_export.py  training.py  utils.py
streamlit_app/: app.py  common.py
